# graph-drawing

./: .gitremotes  Makefile  README.md  environment.yml  networkx-drawing-notebook.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
src/: bipartite-shell.py  dodecahedral.py  petersen-circular-black.py  petersen-circular-options.py  petersen-circular.py  petersen-shell.py  petersen-various.py  random-circular.py
