[tool.poetry]
name = "graph-drawing"
version = "0.1.0"
description = "An introduction to drawing graphs in Python with NetworkX."
authors = ["Matthew Henderson <matthew.james.henderson@gmail.com>"]
readme = "README.md"
packages = [{include = "graph_drawing"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.1"
numpy = "^1.25.1"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
networkx = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
